--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,10 +1,10 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = ""
+stack_name = "jens-file-movestack"
 resolve_s3 = true
-s3_prefix = ""
+s3_prefix = "jens_file_move"
 region = "ap-southeast-2"
-profile = ""
+profile = "msa_sandbox"
 confirm_changeset = false
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
